--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="logo-box"><img src="./Image1/logo2.png" alt="the logo of the page" class="logo"/></div>
       <div class="discover"><h1>Discover the perfect candidate with us!</h1></div>
-      <div class="button"><a href="#">Welcome to Tech Top Recruiter</a> </div>
+      <div class="button"><a href="aboutus.html">Welcome to Tech Top Recruiter</a></div>
       <footer>
         <p>&copy;2021 by techtoprecruiter.com</p>
       </footer>
